--- a/source/npm/qsharp/ux/qsharp-circuit.css
+++ b/source/npm/qsharp/ux/qsharp-circuit.css
@@ -362,6 +362,9 @@
   .svg-run-button {
     cursor: pointer;
   }
+
+  /* don't show vertical scrollbar */
+  overflow-y: hidden;
 }
 
 .context-menu {
